feat: adicionar dependencias para producao no Render

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 Django==5.0.2
 python-decouple==3.8
 django-crispy-forms==2.1
-crispy-bootstrap5==2023.10 
+crispy-bootstrap5==2023.10
+psycopg2-binary
+dj_database_url
+gunicorn 
