--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ Django==5.0.2
 python-decouple==3.8
 django-crispy-forms==2.1
 crispy-bootstrap5==2023.10
-psycopg2-binary
-dj_database_url
-gunicorn
-whitenoise 
+psycopg2-binary==2.9.9
+dj-database-url==2.1.0
+gunicorn==21.2.0
+whitenoise==6.6.0
+Pillow==10.1.0 
