--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django==4.2.7
 django-crispy-forms==2.0
 crispy-bootstrap5==0.7
-psycopg2-binary==2.9.7
+psycopg[binary]==3.1.13
 dj-database-url==2.1.0
 gunicorn==21.2.0
 whitenoise==6.6.0 
