--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ django-crispy-forms==2.0
 crispy-bootstrap5==0.7
 gunicorn==21.2.0
 whitenoise==6.6.0 
+dj-database-url==2.2.0
+psycopg[binary]==3.2.9
